[tool.poetry]
name = "weatherframe"
version = "0.1.0"
description = ""
authors = ["Stavros Korokithakis <hi@stavros.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
astral = "^3.2"
pytz = "^2024.1"
requests = "^2.31.0"
openai = "^1.30.1"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
